--- a/common/optimization/optimization.vcxproj
+++ b/common/optimization/optimization.vcxproj
@@ -12,7 +12,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{9D4AB3E4-C26B-4B7D-80EB-61267044F7D8}</ProjectGuid>
-    <RootNamespace>convex_optimization</RootNamespace>
+    <RootNamespace>optimization</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='debug|x64'" Label="Configuration">
