--- a/trainers/sgd/sgd.vcxproj
+++ b/trainers/sgd/sgd.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="debug|x64">
@@ -65,7 +65,7 @@
       </PrecompiledHeaderFile>
       <PrecompiledHeaderOutputFile>
       </PrecompiledHeaderOutputFile>
-      <AdditionalIncludeDirectories>include;..\..\common\treetools_shared\include;..\..\common\linear\include;..\..\common\utilities\include;..\..\common\mappings\include;..\..\common\dataset\include;..\..\common\predictors\include;..\..\common\convex_optimization\include;..\..\common\loss_functions\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>include;..\..\common\treetools_shared\include;..\..\common\linear\include;..\..\common\utilities\include;..\..\common\mappings\include;..\..\common\dataset\include;..\..\common\predictors\include;..\..\common\optimization\include;..\..\common\loss_functions\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -86,7 +86,7 @@
       </PrecompiledHeaderFile>
       <PrecompiledHeaderOutputFile>
       </PrecompiledHeaderOutputFile>
-      <AdditionalIncludeDirectories>include;..\..\common\treetools_shared\include;..\..\common\linear\include;..\..\common\utilities\include;..\..\common\mappings\include;..\..\common\dataset\include;..\..\common\predictors\include;..\..\common\convex_optimization\include;..\..\common\loss_functions\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>include;..\..\common\treetools_shared\include;..\..\common\linear\include;..\..\common\utilities\include;..\..\common\mappings\include;..\..\common\dataset\include;..\..\common\predictors\include;..\..\common\optimization\include;..\..\common\loss_functions\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
