--- a/trainers/sgd/sgd.vcxproj
+++ b/trainers/sgd/sgd.vcxproj
@@ -71,7 +71,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>..\..\common\utilities\lib\$(Configuration);..\..\common\mappings\lib\$(Configuration);..\..\common\dataset\lib\$(Configuration);..\..\common\linear\lib\$(Configuration);..\..\common\loss_functions\lib\$(Configuration);..\..\common\optimization\lib\$(Configuration);..\..\common\predictors\lib\$(Configuration)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>utilities.lib;mappings.lib;dataset.lib;linear.lib;loss_functions.lib;convex_optimization.lib;predictors.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>utilities.lib;mappings.lib;dataset.lib;linear.lib;loss_functions.lib;optimization.lib;predictors.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='release|x64'">
@@ -94,7 +94,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>..\..\common\utilities\lib\$(Configuration);..\..\common\mappings\lib\$(Configuration);..\..\common\dataset\lib\$(Configuration);..\..\common\linear\lib\$(Configuration);..\..\common\loss_functions\lib\$(Configuration);..\..\common\optimization\lib\$(Configuration);..\..\common\predictors\lib\$(Configuration)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>utilities.lib;mappings.lib;dataset.lib;linear.lib;loss_functions.lib;convex_optimization.lib;predictors.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>utilities.lib;mappings.lib;dataset.lib;linear.lib;loss_functions.lib;optimization.lib;predictors.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
