--- a/common/loss_functions/loss_functions.vcxproj.filters
+++ b/common/loss_functions/loss_functions.vcxproj.filters
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="include">
@@ -8,9 +8,6 @@
     <Filter Include="src">
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="tcc">
-      <UniqueIdentifier>{634f6e63-f1e6-40c1-b946-632a36088e97}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
