--- a/common/utilities/utilities.vcxproj.filters
+++ b/common/utilities/utilities.vcxproj.filters
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="include">
@@ -35,7 +35,7 @@
     <ClInclude Include="include\types.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\shared_arguments.h">
+    <ClInclude Include="include\SharedArguments.h">
       <Filter>include</Filter>
     </ClInclude>
   </ItemGroup>
