massive change to parsing, iterating over text files, and casting datavectors to different representations

--- a/common/dataset/dataset.vcxproj
+++ b/common/dataset/dataset.vcxproj
@@ -83,24 +83,23 @@
   <ItemGroup>
     <ClInclude Include="include\IndexValue.h" />
     <ClInclude Include="include\Loader.h" />
+    <ClInclude Include="include\parsing.h" />
     <ClInclude Include="include\ParsingIterator.h" />
     <ClInclude Include="include\SequentialLineIterator.h" />
-    <ClInclude Include="include\SparseEntryParsingIterator.h" />
+    <ClInclude Include="include\SparseEntryParser.h" />
     <ClInclude Include="include\SupervisedExample.h" />
     <ClInclude Include="include\SupervisedExampleBuilder.h" />
-    <ClInclude Include="include\SvmlightParser.h" />
-    <ClInclude Include="src\SparseEntryParsingIterator.cpp" />
+    <ClCompile Include="src\SparseEntryParser.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\IndexValue.cpp" />
     <ClCompile Include="src\SequentialLineIterator.cpp" />
     <ClCompile Include="src\SupervisedExample.cpp" />
-    <ClCompile Include="src\SvmlightParser.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="tcc\Loader.tcc" />
+    <None Include="tcc\parsing.tcc" />
     <None Include="tcc\ParsingIterator.tcc" />
-    <None Include="tcc\SequentialLineIterator.tcc" />
     <None Include="tcc\SupervisedExampleBuilder.tcc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
