--- a/common/dataset/dataset.vcxproj.filters
+++ b/common/dataset/dataset.vcxproj.filters
@@ -18,9 +18,6 @@
     <ClInclude Include="include\SequentialLineIterator.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\SvmlightParser.h">
-      <Filter>include</Filter>
-    </ClInclude>
     <ClInclude Include="include\ParsingIterator.h">
       <Filter>include</Filter>
     </ClInclude>
@@ -33,17 +30,17 @@
     <ClInclude Include="include\SupervisedExampleBuilder.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\SparseEntryParsingIterator.h">
+    <ClInclude Include="include\SparseEntryParser.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="src\SparseEntryParsingIterator.cpp">
+    <ClInclude Include="src\SparseEntryParser.cpp">
       <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="include\parsing.h">
+      <Filter>include</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\SvmlightParser.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
     <ClCompile Include="src\SupervisedExample.cpp">
       <Filter>src</Filter>
     </ClCompile>
@@ -55,9 +52,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="tcc\SequentialLineIterator.tcc">
-      <Filter>tcc</Filter>
-    </None>
     <None Include="tcc\ParsingIterator.tcc">
       <Filter>tcc</Filter>
     </None>
@@ -65,6 +59,9 @@
       <Filter>tcc</Filter>
     </None>
     <None Include="tcc\SupervisedExampleBuilder.tcc">
+      <Filter>tcc</Filter>
+    </None>
+    <None Include="tcc\parsing.tcc">
       <Filter>tcc</Filter>
     </None>
   </ItemGroup>
