moved datavector types from linear project to dataset project

--- a/common/dataset/dataset.vcxproj
+++ b/common/dataset/dataset.vcxproj
@@ -81,25 +81,43 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="include\IndexValue.h" />
+    <ClCompile Include="src\ZeroDatavector.cpp" />
+    <ClInclude Include="include\CompressedIntegerList.h" />
+    <ClInclude Include="include\DatavectorBuilder.h" />
+    <ClInclude Include="include\DenseDatavector.h" />
+    <ClInclude Include="include\IDataVector.h" />
+    <ClInclude Include="include\IntegerList.h" />
     <ClInclude Include="include\Loader.h" />
+    <ClInclude Include="include\OnesDatavector.h" />
     <ClInclude Include="include\Parser.h" />
     <ClInclude Include="include\ParsingIterator.h" />
     <ClInclude Include="include\SequentialLineIterator.h" />
+    <ClInclude Include="include\SparseBinaryDatavector.h" />
+    <ClInclude Include="include\SparseDatavector.h" />
     <ClInclude Include="include\SparseEntryParser.h" />
     <ClInclude Include="include\SupervisedExample.h" />
     <ClInclude Include="include\SupervisedExampleBuilder.h" />
+    <ClCompile Include="src\CompressedIntegerList.cpp" />
+    <ClCompile Include="src\DenseDatavector.cpp" />
+    <ClCompile Include="src\IntegerList.cpp" />
+    <ClCompile Include="src\OnesDatavector.cpp" />
+    <ClCompile Include="src\SparseBinaryDatavector.cpp" />
+    <ClCompile Include="src\SparseDatavector.cpp" />
     <ClCompile Include="src\SparseEntryParser.cpp" />
+    <ClInclude Include="include\ZeroDatavector.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\IndexValue.cpp" />
     <ClCompile Include="src\SequentialLineIterator.cpp" />
     <ClCompile Include="src\SupervisedExample.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="tcc\DataVectorBuilder.tcc" />
+    <None Include="tcc\DenseDataVector.tcc" />
     <None Include="tcc\Loader.tcc" />
     <None Include="tcc\Parser.tcc" />
     <None Include="tcc\ParsingIterator.tcc" />
+    <None Include="tcc\SparseBinaryDataVector.tcc" />
+    <None Include="tcc\SparseDataVector.tcc" />
     <None Include="tcc\SupervisedExampleBuilder.tcc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
