--- a/tests/linear_test/linear_test.vcxproj
+++ b/tests/linear_test/linear_test.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="debug|x64">
@@ -62,14 +62,14 @@
       </PrecompiledHeaderFile>
       <PrecompiledHeaderOutputFile>
       </PrecompiledHeaderOutputFile>
-      <AdditionalIncludeDirectories>..\..\common\linear\include;..\..\common\utilities\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\common\linear\include;..\..\common\dataset\include;..\..\common\utilities\include</AdditionalIncludeDirectories>
       <OpenMPSupport>false</OpenMPSupport>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>..\..\common\linear\lib\$(Configuration)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>linear.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\..\common\linear\lib\$(Configuration);..\..\common\dataset\lib\$(Configuration)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>dataset.lib;linear.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='release|x64'">
@@ -84,7 +84,7 @@
       </PrecompiledHeaderFile>
       <PrecompiledHeaderOutputFile>
       </PrecompiledHeaderOutputFile>
-      <AdditionalIncludeDirectories>..\..\common\linear\include;..\..\common\utilities\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\common\linear\include;..\..\common\dataset\include;..\..\common\utilities\include</AdditionalIncludeDirectories>
       <OpenMPSupport>true</OpenMPSupport>
     </ClCompile>
     <Link>
@@ -92,8 +92,8 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>..\..\common\linear\lib\$(Configuration)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>linear.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\..\common\linear\lib\$(Configuration);..\..\common\dataset\lib\$(Configuration)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>dataset.lib;linear.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
