--- a/libraries/mappings/mappings.vcxproj
+++ b/libraries/mappings/mappings.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="debug|x64">
@@ -51,7 +51,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>include;..\utilities\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>include;..\utilities\include;..\common\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -67,7 +67,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>include;..\utilities\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>include;..\utilities\include;..\common\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -82,7 +82,7 @@
     <ClInclude Include="include\Constant.h" />
     <ClInclude Include="include\Coordinatewise.h" />
     <ClInclude Include="include\DecisionTreePath.h" />
-    <ClInclude Include="include\IndexValue.h" />
+    <ClInclude Include="include\SerializableIndexValue.h" />
     <ClInclude Include="include\Io.h" />
     <ClInclude Include="include\Shift.h" />
     <ClInclude Include="include\Sum.h" />
@@ -97,7 +97,7 @@
     <ClCompile Include="src\Constant.cpp" />
     <ClCompile Include="src\Coordinatewise.cpp" />
     <ClCompile Include="src\DecisionTreePath.cpp" />
-    <ClCompile Include="src\IndexValue.cpp" />
+    <ClCompile Include="src\SerializableIndexValue.cpp" />
     <ClCompile Include="src\Io.cpp" />
     <ClCompile Include="src\Shift.cpp" />
     <ClCompile Include="src\Sum.cpp" />
