--- a/libraries/utilities/utilities.vcxproj
+++ b/libraries/utilities/utilities.vcxproj
@@ -82,7 +82,7 @@
     <ClInclude Include="include\CommandLineParser.h" />
     <ClInclude Include="include\files.h" />
     <ClInclude Include="include\JsonSerializer.h" />
-    <ClInclude Include="include\random_engines.h" />
+    <ClInclude Include="include\randomEngines.h" />
     <ClInclude Include="include\SharedArguments.h" />
   </ItemGroup>
   <ItemGroup>
@@ -96,7 +96,7 @@
     <ClCompile Include="src\CommandLineParser.cpp" />
     <ClCompile Include="src\files.cpp" />
     <ClCompile Include="src\JsonSerializer.cpp" />
-    <ClCompile Include="src\random_engines.cpp" />
+    <ClCompile Include="src\randomEngines.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
