--- a/libraries/utilities/utilities.vcxproj.filters
+++ b/libraries/utilities/utilities.vcxproj.filters
@@ -26,13 +26,13 @@
     <ClInclude Include="include\files.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\random_engines.h">
-      <Filter>include</Filter>
-    </ClInclude>
     <ClInclude Include="include\BinaryClassificationEvaluator.h">
       <Filter>include</Filter>
     </ClInclude>
     <ClInclude Include="include\SharedArguments.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="include\randomEngines.h">
       <Filter>include</Filter>
     </ClInclude>
   </ItemGroup>
@@ -60,10 +60,10 @@
     <ClCompile Include="src\files.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="src\random_engines.cpp">
+    <ClCompile Include="src\BinaryClassificationEvaluator.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="src\BinaryClassificationEvaluator.cpp">
+    <ClCompile Include="src\randomEngines.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
