--- a/libraries/linear/linear.vcxproj
+++ b/libraries/linear/linear.vcxproj
@@ -98,6 +98,7 @@
     <ClInclude Include="include\BiMatrix.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="tcc\DoubleVector.tcc" />
     <None Include="tcc\RowMatrix.tcc" />
     <None Include="tcc\BiMatrix.tcc" />
   </ItemGroup>
