Added README files to linear and to dataset

--- a/libraries/dataset/dataset.vcxproj.filters
+++ b/libraries/dataset/dataset.vcxproj.filters
@@ -119,4 +119,7 @@
       <Filter>tcc</Filter>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="README.txt" />
+  </ItemGroup>
 </Project>
