--- a/libraries/linear/linear.vcxproj.filters
+++ b/libraries/linear/linear.vcxproj.filters
@@ -73,4 +73,7 @@
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="README.txt" />
+  </ItemGroup>
 </Project>
