--- a/libraries/dataset/dataset.vcxproj
+++ b/libraries/dataset/dataset.vcxproj
@@ -120,6 +120,12 @@
     <None Include="tcc\SparseDataVector.tcc" />
     <None Include="tcc\SupervisedExampleBuilder.tcc" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="README.txt">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='release|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='debug|x64'">true</ExcludedFromBuild>
+    </Text>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
