--- a/libraries/linear/linear.vcxproj
+++ b/libraries/linear/linear.vcxproj
@@ -110,6 +110,12 @@
     <ClCompile Include="src\IMatrix.cpp" />
     <ClCompile Include="src\IVector.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="README.txt">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='release|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='debug|x64'">true</ExcludedFromBuild>
+    </Text>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
