--- a/libraries/dataset/dataset.vcxproj
+++ b/libraries/dataset/dataset.vcxproj
@@ -81,30 +81,30 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\ZeroDatavector.cpp" />
+    <ClCompile Include="src\ZeroDataVector.cpp" />
     <ClInclude Include="include\CompressedIntegerList.h" />
     <ClInclude Include="include\DatavectorBuilder.h" />
-    <ClInclude Include="include\DenseDatavector.h" />
+    <ClInclude Include="include\DenseDataVector.h" />
     <ClInclude Include="include\IDataVector.h" />
     <ClInclude Include="include\IntegerList.h" />
     <ClInclude Include="include\Loader.h" />
-    <ClInclude Include="include\OnesDatavector.h" />
+    <ClInclude Include="include\OnesDataVector.h" />
     <ClInclude Include="include\Parser.h" />
     <ClInclude Include="include\ParsingIterator.h" />
     <ClInclude Include="include\SequentialLineIterator.h" />
-    <ClInclude Include="include\SparseBinaryDatavector.h" />
-    <ClInclude Include="include\SparseDatavector.h" />
+    <ClInclude Include="include\SparseBinaryDataVector.h" />
+    <ClInclude Include="include\SparseDataVector.h" />
     <ClInclude Include="include\SparseEntryParser.h" />
     <ClInclude Include="include\SupervisedExample.h" />
     <ClInclude Include="include\SupervisedExampleBuilder.h" />
     <ClCompile Include="src\CompressedIntegerList.cpp" />
-    <ClCompile Include="src\DenseDatavector.cpp" />
+    <ClCompile Include="src\DenseDataVector.cpp" />
     <ClCompile Include="src\IntegerList.cpp" />
-    <ClCompile Include="src\OnesDatavector.cpp" />
-    <ClCompile Include="src\SparseBinaryDatavector.cpp" />
-    <ClCompile Include="src\SparseDatavector.cpp" />
+    <ClCompile Include="src\OnesDataVector.cpp" />
+    <ClCompile Include="src\SparseBinaryDataVector.cpp" />
+    <ClCompile Include="src\SparseDataVector.cpp" />
     <ClCompile Include="src\SparseEntryParser.cpp" />
-    <ClInclude Include="include\ZeroDatavector.h" />
+    <ClInclude Include="include\ZeroDataVector.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\SequentialLineIterator.cpp" />
