--- a/libraries/dataset/dataset.vcxproj.filters
+++ b/libraries/dataset/dataset.vcxproj.filters
@@ -39,25 +39,25 @@
     <ClInclude Include="include\DatavectorBuilder.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\DenseDatavector.h">
-      <Filter>include</Filter>
-    </ClInclude>
     <ClInclude Include="include\IDataVector.h">
       <Filter>include</Filter>
     </ClInclude>
     <ClInclude Include="include\IntegerList.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\OnesDatavector.h">
+    <ClInclude Include="include\SparseBinaryDataVector.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\SparseBinaryDatavector.h">
+    <ClInclude Include="include\SparseDataVector.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\SparseDatavector.h">
+    <ClInclude Include="include\ZeroDataVector.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\ZeroDatavector.h">
+    <ClInclude Include="include\OnesDataVector.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="include\DenseDataVector.h">
       <Filter>include</Filter>
     </ClInclude>
   </ItemGroup>
@@ -71,25 +71,25 @@
     <ClCompile Include="src\CompressedIntegerList.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="src\DenseDatavector.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
     <ClCompile Include="src\IntegerList.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="src\OnesDatavector.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
-    <ClCompile Include="src\SparseBinaryDatavector.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
-    <ClCompile Include="src\SparseDatavector.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
-    <ClCompile Include="src\ZeroDatavector.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
     <ClCompile Include="src\SparseEntryParser.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\SparseBinaryDataVector.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\SparseDataVector.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ZeroDataVector.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\OnesDataVector.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\DenseDataVector.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
